Add some formating

--- a/lesson-6.html
+++ b/lesson-6.html
@@ -1,5 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
 <h1>Our first website</h1>
-
+    
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima debitis nesciunt sequi sunt non libero repellendus deserunt et. Eum, minima! Neque dignissimos eum iusto deleniti commodi libero soluta expedita eos!</p>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate soluta, vero provident odio hic aliquid optio explicabo enim ex nobis cumque commodi iste neque ullam necessitatibus mollitia voluptas placeat repellendus.</p>
 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero tenetur obcaecati repellat consectetur amet rem perspiciatis ipsa earum neque nesciunt, voluptate praesentium quas dolorum facere sed atque. Autem, quisquam itaque. </p>
@@ -16,3 +26,5 @@
     <li>Buy milk</li>
     <li><strike>Be awesome</strike> </li>
 </ol>
+</body>
+</html>
