--- a/lesson-6.html
+++ b/lesson-6.html
@@ -15,7 +15,7 @@
 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero tenetur obcaecati repellat consectetur amet rem perspiciatis ipsa earum neque nesciunt, voluptate praesentium quas dolorum facere sed atque. Autem, quisquam itaque. </p>
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio voluptatibus, error assumenda reprehenderit blanditiis consequatur praesentium provident perferendis minus, ipsa, dolores porro? Earum, ex? Voluptate fugit adipisci qui iure deleniti. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque et aspernatur, odit unde illo quas dignissimos, delectus recusandae magnam assumenda, velit sed doloribus nobis veniam magni beatae molestias distinctio similique! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam totam corporis, veritatis itaque explicabo praesentium autem ducimus placeat, rerum magnam labore debitis quod velit tenetur ipsa dicta rem, iure a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur magnam soluta modi dolorum ipsum culpa quo fuga similique provident fugiat officia assumenda eveniet inventore minima, vel architecto laborum illum sapiente!</p>
 
-<img width="300" src="./images/cat.jpg" alt="This is grey cat">
+<img width="300" src="./images/cat.jpg" alt="This is a grey cat">
 
 <h2>To do list:</h2>
 
