--- a/lesson-6.html
+++ b/lesson-6.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
-<h1>Our first website</h1>
-    
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima debitis nesciunt sequi sunt non libero repellendus deserunt et. Eum, minima! Neque dignissimos eum iusto deleniti commodi libero soluta expedita eos!</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate soluta, vero provident odio hic aliquid optio explicabo enim ex nobis cumque commodi iste neque ullam necessitatibus mollitia voluptas placeat repellendus.</p>
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero tenetur obcaecati repellat consectetur amet rem perspiciatis ipsa earum neque nesciunt, voluptate praesentium quas dolorum facere sed atque. Autem, quisquam itaque. </p>
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio voluptatibus, error assumenda reprehenderit blanditiis consequatur praesentium provident perferendis minus, ipsa, dolores porro? Earum, ex? Voluptate fugit adipisci qui iure deleniti. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque et aspernatur, odit unde illo quas dignissimos, delectus recusandae magnam assumenda, velit sed doloribus nobis veniam magni beatae molestias distinctio similique! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam totam corporis, veritatis itaque explicabo praesentium autem ducimus placeat, rerum magnam labore debitis quod velit tenetur ipsa dicta rem, iure a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur magnam soluta modi dolorum ipsum culpa quo fuga similique provident fugiat officia assumenda eveniet inventore minima, vel architecto laborum illum sapiente!</p>
 
-<img width="300" src="./images/cat.jpg" alt="This is a grey cat">
+    <h1>Our first website</h1>
 
-<h2>To do list:</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima debitis nesciunt sequi sunt non libero
+        repellendus deserunt et. Eum, minima! Neque dignissimos eum iusto deleniti commodi libero soluta expedita eos!
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate soluta, vero provident odio hic aliquid optio
+        explicabo enim ex nobis cumque commodi iste neque ullam necessitatibus mollitia voluptas placeat repellendus.
+    </p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero tenetur obcaecati repellat consectetur amet rem
+        perspiciatis ipsa earum neque nesciunt, voluptate praesentium quas dolorum facere sed atque. Autem, quisquam
+        itaque. </p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio voluptatibus, error assumenda reprehenderit
+        blanditiis consequatur praesentium provident perferendis minus, ipsa, dolores porro? Earum, ex? Voluptate fugit
+        adipisci qui iure deleniti. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque et aspernatur, odit
+        unde illo quas dignissimos, delectus recusandae magnam assumenda, velit sed doloribus nobis veniam magni beatae
+        molestias distinctio similique! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam totam corporis,
+        veritatis itaque explicabo praesentium autem ducimus placeat, rerum magnam labore debitis quod velit tenetur
+        ipsa dicta rem, iure a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur magnam soluta modi
+        dolorum ipsum culpa quo fuga similique provident fugiat officia assumenda eveniet inventore minima, vel
+        architecto laborum illum sapiente!</p>
 
-<a href="">Add new item</a>
+    <img width="300" src="./images/cat.jpg" alt="This is a grey cat">
 
-<ol>
-    <li>Learn HTML</li>
-    <li>Buy milk</li>
-    <li><strike>Be awesome</strike> </li>
-</ol>
+    <h2>To do list:</h2>
+
+    <a href="">Add new item</a>
+
+    <ol>
+        <li>Learn HTML</li>
+        <li>Buy milk</li>
+        <li><del>Be awesome</del> </li>
+    </ol>
 
 </body>
+
 </html>
