--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 
 <body>
-
-    <a href="C:\Users\Agita\Documents\GitHub\Lesson-6\lesson-6.html">
+    <div>
+        <a href="C:\Users\Agita\Documents\GitHub\Lesson-6\lesson-6.html">
         <---Back </a>
-
+    </div>
+    <div>
             <h2>Add todo item.</h2>
-
+    </div>   
             <form action="" method="GET">
                 <div>
 
@@ -23,10 +24,12 @@
                 </div>
 
                 <div>
-                    <label for="task-description">Task description:</label>
-                    <br>
+                    <div><label for="task-description">Task description:</label>
+                    </div>
+                    <div>
                     <textarea id="task-description" cols="40" rows="20" name="description">
-
+                    </div>
+                    
             </textarea>
                 </div>
 
