--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
                     <input type="text" id="task-name" placeholder="Please enter task name" name="name">
                 </div>
 
-                <div>
-                    <div><label for="task-description">Task description:</label>
-                    </div>
+                <div></div>
                     <div>
-                    <textarea id="task-description" cols="40" rows="20" name="description">
+                            <label for="task-description">Task description:</label>
                     </div>
+
+                    <div>
+                            <textarea id="task-description" cols="40" rows="20" name="description">
                     
-            </textarea>
-                </div>
+                    
+                            </textarea>
+                     </div>
 
                 <div>
                     <input type="checkbox" id="completed-checkbox" checked>
