--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                         <option selected value="">Choose category</option>
                         <option value="bar">Bar</option>
                         <option value="foo">Foo</option>
+                    </select>
 
                 </div>
                 
